adding temp workaround for prop color changes

--- a/px-vis-box-whisker.html
+++ b/px-vis-box-whisker.html
@@ -301,7 +301,7 @@
 
       _updateColors(fillColor, strokeColor, medianStrokeColor, meanFillColor, outlierFillColor) {
         // TODO: implement changes in color
-        console.warn('color change handler not impl');
+        this._draw(this.data, this.position);
       }
 
     });
