adding correct mapping from boxplot to box whisker components

--- a/px-vis-boxplot.html
+++ b/px-vis-boxplot.html
@@ -72,15 +72,15 @@
         svg="[[svg]]"
         x="[[x]]"
         y="[[y]]"
-        box-width="[[boxWidth]]"
-        edge-width="[[edgeWidth]]"
-        fill-color="[[fillColor]]"
-        stroke-color="[[strokeColor]]"
-        median-stroke-color="[[medianStrokeColor]]"
-        mean-radius="[[meanRadius]]"
-        mean-fill-color="[[meanFillColor]]"
-        outlier-radius="[[outlierRadius]]"
-        outlier-fill-color="[[outlierFillColor">
+        box-width="[[boxWhiskerConfig.boxWidth]]"
+        edge-width="[[boxWhiskerConfig.edgeWidth]]"
+        fill-color="[[boxWhiskerConfig.fillColor]]"
+        stroke-color="[[boxWhiskerConfig.strokeColor]]"
+        median-stroke-color="[[boxWhiskerConfig.medianStrokeColor]]"
+        mean-radius="[[boxWhiskerConfig.meanRadius]]"
+        mean-fill-color="[[boxWhiskerConfig.meanFillColor]]"
+        outlier-radius="[[boxWhiskerConfig.outlierRadius]]"
+        outlier-fill-color="[[boxWhiskerConfig.outlierFillColor]]">
       </px-vis-box-whisker>
     </template>
 
