--- a/px-vis-boxplot.html
+++ b/px-vis-boxplot.html
@@ -190,6 +190,7 @@
 
       observers: [
         '_boxWhiskerConfigChanged(boxWhiskerConfig)',
+        '_sizeChanged(width, height)',
         '_updateSeriesConfig(_colorsAreSet)'
       ],
 
@@ -276,6 +277,17 @@
             });
           }
         }, 10);
+      },
+
+      _sizeChanged: function() {
+        const comps = this.shadowRoot.querySelectorAll('px-vis-box-whisker');
+        if (comps) {
+          comps.forEach(function(comp) {
+            // x and y changes are not triggering on the box whisker components,
+            // so this is here for now to force a re-draw when the chart size changes
+            comp.draw();
+          });
+        }
       },
 
       _colorsSet: function() {
