--- a/px-vis-boxplot.html
+++ b/px-vis-boxplot.html
@@ -282,12 +282,13 @@
         exts.y = [Number.MAX_SAFE_INTEGER, Number.MIN_SAFE_INTEGER];
         // to find the min/max y values, we need to check each set of data
         for (const i in chartData) {
-          const outliersMin = Math.min(...chartData[i].outliers);
-          const outliersMax = Math.max(...chartData[i].outliers);
+          const data = chartData[i].data;
+          const outliersMin = Math.min.apply(Math, data.outliers);
+          const outliersMax = Math.max.apply(Math, data.outliers);
           // compare current min/max, current series min/max, and the min/max of outliers
           exts.y = [
-            Math.min(exts.y[0], chartData[i].min, outliersMin),
-            Math.max(exts.y[1], chartData[i].max, outliersMax)
+            Math.min(exts.y[0], data.min, outliersMin),
+            Math.max(exts.y[1], data.max, outliersMax)
           ];
         }
         return exts;
