--- a/px-vis-boxplot.html
+++ b/px-vis-boxplot.html
@@ -277,7 +277,7 @@
           return;
         }
         const exts = {};
-        exts.x = [0, chartData.length];
+        exts.x = [0, chartData.length + 1];
         exts.y = [Number.MAX_SAFE_INTEGER, Number.MIN_SAFE_INTEGER];
         // to find the min/max y values, we need to check each set of data
         for (const i in chartData) {
