--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -64,7 +64,8 @@
 
     <!-- API Viewer -->
     <px-demo-api-viewer
-      source="px-vis-boxplot">
+      source="px-vis-boxplot"
+      api-source-file-path="px-vis-boxplot-api.json">
     </px-demo-api-viewer>
 
     <!-- Footer -->
