adding debounce time to box whisker drawing

--- a/demo/px-vis-boxplot-demo.html
+++ b/demo/px-vis-boxplot-demo.html
@@ -171,7 +171,8 @@
           strokeColor: '#000',
           medianStrokeColor: '#FFF',
           meanFillColor: '#FFF',
-          outlierFillColor: '#FFF'
+          outlierFillColor: '#FFF',
+          drawDebounceTime: 50
         }
       },
 
