--- a/px-vis-boxplot.html
+++ b/px-vis-boxplot.html
@@ -82,7 +82,8 @@
         mean-radius="[[boxWhiskerConfig.meanRadius]]"
         mean-fill-color="[[boxWhiskerConfig.meanFillColor]]"
         outlier-radius="[[boxWhiskerConfig.outlierRadius]]"
-        outlier-fill-color="[[boxWhiskerConfig.outlierFillColor]]">
+        outlier-fill-color="[[boxWhiskerConfig.outlierFillColor]]"
+        draw-debounce-time="[[boxWhiskerConfig.drawDebounceTime]]">
       </px-vis-box-whisker>
     </template>
 
