Add simple input data tests
Add new test

--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
       WCT._config.environmentScripts.push('webcomponentsjs/webcomponents-lite.js');
 
       WCT.loadSuites([
-        'px-vis-boxplot-fixture.html'
+        'px-vis-boxplot-fixture.html',
       ]);
     </script>
   </body>
