--- a/test/px-vis-boxplot-fixture.html
+++ b/test/px-vis-boxplot-fixture.html
@@ -20,6 +20,7 @@
     </test-fixture>
 
     <script src="px-vis-boxplot-tests.js"></script>
+    <script src="basic-input-values.js"></script>
 
   </body>
 </html>
