--- a/test/px-vis-boxplot-fixture.html
+++ b/test/px-vis-boxplot-fixture.html
@@ -23,6 +23,7 @@
     <script src="px-vis-boxplot-tests.js"></script>
     <script src="basic-input-values.js"></script>
     <script src="orientation.js"></script>
+    <script src="box-whisker-config-test.js"></script>
 
   </body>
 </html>
