Offset start position with 1

--- a/test/helpers.html
+++ b/test/helpers.html
@@ -28,7 +28,7 @@
     var data = [];
     for (var i = 0; i < count; ++i) {
       var item = {
-        position: i,
+        position: i + 1,
         data: {
           max: 9 + i,
           mean: 5 + i,
